lectures 6,7